
pkgincludebitsdir = ${pkgincludedir}/bits
pkgincludebits_HEADERS = \
	any_iterator.hpp \
	detail/any_iterator_abstract_base.hpp \
	detail/any_iterator_metafunctions.hpp \
	detail/any_iterator_wrapper.hpp \
	bool.hpp \
	predicates.hpp \
	trie.hpp \
	triealloc.hpp

uninstall-hook:
	-rmdir ${DESTDIR}/${pkgincludebitsdir}
